[package]
name = "rs-discord-radio-stkngesk"
version = "0.1.0"
edition = "2021"
authors = ["JeanStkng <stkngesk@gmail.com>", "RickEsk <stkngesk@gmail.com>"] 

[dependencies]
reqwest = { default-features = false, features = ["stream"], optional = true, version = "0.11" }
serenity = { default-features = false, optional = true, version = "0.12.0", features = ["voice", "gateway"] }
songbird = { default-features = true, version = "0.4.6"}
symphonia = { default-features = false, optional = true, version = "0.5.2" }
tokio = { default-features = false, optional = true, version = "1.0" }
tracing = { version = "0.1", features = ["log"] }