[package]
name = "rs-discord-radio-stkngesk"
version = "0.1.0"
edition = "2021"
authors = ["JeanStkng <stkngesk@gmail.com>", "RickEsk <stkngesk@gmail.com>"] 

[dependencies]
reqwest = "0.11"
serenity = { features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"], version = "0.12" }
songbird = { version = "0.4" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tokio = { features = ["macros", "rt-multi-thread", "signal", "sync"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
